picture: fix reference counting with picture_AttachNewAncillary

Attaching an ancillary will increment the reference count for it, so it
needs to be decreased afterwards.

Fixes #27080